# ElasticAPM-Demo

./: README.md  docker-compose.yaml  simulate_request.bat  simulate_request.sh
app-demo-java/: README.md  build.gradle  settings.gradle
app-demo-java/src/main/java/com/example/appdemo/: AppDemoApplication.java
app-demo-java/src/main/java/com/example/appdemo/controller/: DemoController.java  TodoController.java
app-demo-java/src/main/java/com/example/appdemo/dao/: TodoRepository.java
app-demo-java/src/main/java/com/example/appdemo/entity/: Todo.java
app-demo-java/src/main/resources/: application.properties  elasticapm.properties
app-demo-java/src/test/java/com/example/appdemo/: AppDemoApplicationTests.java
app-demo-python/: README.md  main.py  pyproject.toml
data/: init.sql
