[tool.poetry]
name = "app-demo-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app_demo_python"}]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
elastic-apm = "^6.13.2"
psutil = "^5.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
